@@ -419,7 +419,7 @@ public class WCreateFromShipmentUI extends CreateFromShipment implements EventLi
 		//MPo, 28/5/18 add original change: 18/7/2016 PrCtr selection
 		int User1_ID = Env.getContextAsInt(Env.getCtx(), p_WindowNo, "User1_ID");
 		//
-		bPartnerField.setValue(new Integer(C_BPartner_ID));
+		bPartnerField.setValue(Integer.valueOf(C_BPartner_ID));
 
 		//  initial loading
 		// MPo, 26/5/18 add original change: 18/7/2016 PrCtr selection
